fixed bar navigation on mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,9 @@ button.normal {
    left: 0;
 
 }
+#bar {
+    cursor: pointer;
+}
 .nav-list {
     display: flex;
     align-items: center;
